src/objects/inscor__Inventory_Location__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Location</label>
        <referenceTo>inscor__Company_Location__c</referenceTo>
        <relationshipLabel>Inventory Locations</relationshipLabel>
        <relationshipName>Inventory_Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Codes_Allowed__c</fullName>
        <inlineHelpText>Select which condition codes are allowed to reside in this location. Any conditions not selected will be blocked from this location.</inlineHelpText>
        <label>Condition Codes Allowed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>FN</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>SV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By marking inactive, it keeps it in history but prevents any further use of the location.</inlineHelpText>
        <label>Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Location_Height__c</fullName>
        <label>Location Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Location_Length__c</fullName>
        <label>Location Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Location_Width__c</fullName>
        <label>Location Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Material_Type_Allowed__c</fullName>
        <inlineHelpText>Select which material types are allowed to reside in this location. If restrictions are required, normal locations should use &quot;All But Restricted&quot; together with any types that will not be restricted instead of using the &quot;All&quot; option.</inlineHelpText>
        <label>Material Type Allowed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Hazmat</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>Shelf Life</fullName>
                </value>
                <value>
                    <fullName>Export Controlled</fullName>
                </value>
                <value>
                    <fullName>All But Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Restrict_Location_From_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option to block allocations from parts in this location, i.e. quarantine area for rejected parts and any other staging area where parts should be blocked from being sold.</inlineHelpText>
        <label>Restrict Location From Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Zone</valueSetName>
        </valueSet>
    </fields>
    <label>Inventory Location</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Company_Location__c</columns>
        <columns>inscor__Condition_Codes_Allowed__c</columns>
        <columns>inscor__Material_Type_Allowed__c</columns>
        <columns>inscor__Restrict_Location_From_Sale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>